--- a/root/home.html
+++ b/root/home.html
@@ -56,47 +56,82 @@ The site has a new look! I've updated it to look and preform much better" name="
             <!-- <link rel="stylesheet" href="https://storage.theflagen430297.com/css/text.css" type="text/css"> -->
             <link rel="stylesheet" href="../css/text.css" type="text/css">
             <!-- <link rel="stylesheet" href="https://storage.theflagen430297.com/css/animation.css" type="text/css"> -->
-            <link rel="stylesheet" href="../css/animation.css" type="text/css">
+            <link rel="stylesheet" href="../css/animations.css" type="text/css">
             <link rel="shortcut icon" href="https://storage.theflagen430297.com/pictures/logo.ico" type="image/x-icon">
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
             <!-- <script>document.write('<script src="https://storage.theflagen430297.com/source-code.js?update-cache=' + Math.floor(Math.random() * 100) + '" defer\><\/script>');</script> -->
             <script>document.write('<script src="beta-source-code.js?update-cache=' + Math.floor(Math.random() * 100) + '" defer\><\/script>');</script>
     </head>
     <body>
-        <div class="container">
-            <div class="navbar">
-                <img src="https://storage.theflagen430297.com/pictures/logo.png" alt="Test 1" class="logo">
-                <nav>
-                    <ul id="menuList">
-                        <li><a href="">Mods</a></li>
-                        <li><a href="">Games</a></li>
-                        <li><a href="">Cool Stuff</a></li>
-                        <li><a href="">Contact Info</a></li>
-                    </ul>
-                </nav>
-                <img src="/menu.png" alt="Test 1" class="menu" onclick="toggleMenu()">
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <h2>This is a test</h2>
-                    <h3>Just testing</h3>
-                    <p><i>(No, for real, I'm just testing XD)</i></p>
-                    <h4>Give me $32.50</h4>
-                    <button type="button">Okay I'll give it to you :(</button>
-                </div>
-                <div class="col-2">
-                    <img src="/controller.png" alt="lol" class="big-logo">
-                    <div class="color-box"></div>
+        <div id="background-container">
+            <div id="BGG1"></div> 
+            <div id="BGG2"></div> 
+            <img src="https://storage.theflagen430297.com/pictures/Valorant-Banner-1920x928.png" alt="Error: Background Image didn't load!">
+        </div>
+        <div id="navigation-container">
+            <div id="content">
+                <div id="trademark">
+                    <h3 id="text" class="VALORANTFontBlink">TheFlagen430297</h3>
+                    <img src="https://storage.theflagen430297.com/pictures/logo.png" alt="Error: Logo didn't load!" id="logo">
                 </div>
             </div>
         </div>
-        <script>
-            let menuList = document.getElementById("menuList")
-            menuList.style.maxHeight = "0px"
-            function toggleMenu() {
-                if (menuList.style.maxHeight == "0px") menuList.style.maxHeight = "130px"
-                else menuList.style.maxHeight = "0px"
-            }
-        </script>
+        <div id="content-container">
+            <div id="content">
+                <h1>This is the start</h1>
+                <p>
+                    Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                    <br>Test
+                </p>
+            </div>
+        </div>
     </body>
 </html>
