Commit 5: Backing the Basics
This is the simple structure for the website

--- a/root/home.html
+++ b/root/home.html
@@ -43,9 +43,9 @@ The site has a new look! I've updated it to look and preform much better" name="
             <meta charset="utf-8">
             <meta http-equiv="x-ua-compatible" content="ie=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <meta content="#2d5152" name="theme-color" data-react-helmet="true">
-            <meta content="#2d5152" name="msapplication-navbutton-color">
-            <meta content="#2d5152" name="apple-mobile-web-app-status-bar-style">
+            <meta content="#ff1414" name="theme-color" data-react-helmet="true">
+            <meta content="#ff1414" name="msapplication-navbutton-color">
+            <meta content="#ff1414" name="apple-mobile-web-app-status-bar-style">
             <meta name="apple-mobile-web-app-capable" content="no">
             <meta name="mobile-web-app-capable" content="no">
             <meta name="twitter:card" content="summary_large_image">
@@ -58,91 +58,65 @@ The site has a new look! I've updated it to look and preform much better" name="
             <!-- <link rel="stylesheet" href="https://storage.theflagen430297.com/css/animation.css" type="text/css"> -->
             <link rel="stylesheet" href="../css/animations.css" type="text/css">
             <link rel="shortcut icon" href="https://storage.theflagen430297.com/pictures/logo.ico" type="image/x-icon">
-            <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
             <!-- <script>document.write('<script src="https://storage.theflagen430297.com/source-code.js?update-cache=' + Math.floor(Math.random() * 100) + '" defer\><\/script>');</script> -->
-            <script>document.write('<script src="beta-source-code.js?update-cache=' + Math.floor(Math.random() * 100) + '" defer\><\/script>');</script>
+            <script>document.write('<script type="text/javascript" src="beta-source-code.js?update-cache=' + Math.floor(Math.random() * 100) + '" defer\><\/script>');</script>
     </head>
     <body>
-        <div id="background-container">
-            <div id="BGG1"></div> 
-            <div id="BGG2"></div> 
-            <img id="picture" src="https://storage.theflagen430297.com/pictures/Valorant-Banner-1920x928.png" alt="Error: Background Image didn't load!">
-        </div>
+        <div id="background-container"><div id="BGG1"></div><div id="BGG2"></div><img id="picture"></div>
         <div id="navigation-container">
             <div id="content">
                 <div id="trademark">
-                    <h3 id="text"><span id="span">TheFlagen430297</span></h3>
-                    <img src="https://storage.theflagen430297.com/pictures/logo.png" alt="Error: Logo didn't load!" id="logo">
+                    <a id="redirect"><h3 id="text"><span id="span">TheFlagen430297</span></h3></a>
+                    <img src="https://storage.theflagen430297.com/pictures/logo.png" alt="Error: Logo didn't load!" id="logo" />
                 </div>
-                <div id="mobile-container">
-                    <span id="toggle">...</span>
-                </div>
+                <div id="headlines"></div>
+                <div id="highlighted-pages-container"></div>
+                <div id="mobile-container"><span id="toggle">...</span></div>
             </div>
         </div>
         <div id="content-container">
-            <div id="mobile-container" class="tracking-in-expand" >
-                <ul id="links" style="left:30px; position: absolute;">
-                    <li>My Discord Server</li>
-                    <li>YouTube</li>
-                    <li>New Ondorria</li>
-                    <li>Slide Da Cube</li>
-                </ul>
-            </div>
-            <div id="content" >
-                <h1>This is the start</h1>
-                <p>
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-                    Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
-                    <br>Test
+            <div id="mobile-container" class="tracking-in-expand"><ul id="links" style="left:30px; position: absolute;"></ul></div>
+            <div id="other-links-container" class="tracking-in-expand"><ul id="links" style="left:30px; position: absolute;"></ul></div>
+            <div id="content">
+                <h1>Verified Accounts</h1>
+                <p>I have a lot of accounts that are public :D So here is a list of them all!
+                	<br> Also in the future, all possible accounts will have the <u><i><code>☑ Verified Flagen Account</code></i></u> tag<br>and will be verified here.
+                	<br> <i>(Imma collecting them like candy XD)</i>
+                	<br>
+                	<br><a id="counter"></a>
                 </p>
+                <div id="account_container"></div>
+                <p>
+                	<br id="Info"><i>But Flagen, anyone can post links on a website and say it is you, how do we know this is legit??</i>
+                	<br><b>Great Question!</b> This is how:
+                	<br>The accounts that are linked in this page is from the official website <a href="https://theflagen430297.com/" target="_blank" class="link" id="link">https://theflagen430297.com</a>, which has a locked icon in the browser which is only obtainable by legal means
+                	<br>so this website is verified by <a href="https://www.icann.org/" target="_blank" class="link">ICANN</a>
+                	<br>Another way is by checking if other accounts have other accounts on them, like I have my <a href="https://www.youtube.com/channel/UCEbdg3PUAFwR1xOoYI7_bOA" target="_blank" class="link">YouTube</a> account linked on my Discord account, or with my <a href="https://github.com/TheFlagen430297" target="_blank" class="link">GitHub</a> account being linked in <a href="https://www.npmjs.com/~theflagen430297" target="_blank" class="link">NPM</a>
+                	<br>So you can take this as full verification of my accounts :)
+                	<br>
+                	<br><i>Still don't believe me? Ask me on Discord! <b>TheFlagen430297#2546</b></i>
+                </p>
+                <script>
+                    setTimeout(() => {
+                            let container = document.getElementById("account_container"),
+                            counter = document.getElementById("counter"),
+                            count = 0;
+                        fetch("https://storage.theflagen430297.com/code/accounts.json").then(i => i.json()).then(x => {
+                            x.forEach(y => {
+                                let p = document.createElement("p")
+                                if (y.siteLink === "") p.innerHTML = `<b>${y.siteName}</b> <a id="${y.id}">${y.siteUsername}</a>`
+                                else p.innerHTML = `<b>${y.siteName}</b> <a id="${y.id}" href="${y.siteLink}" target="_blank" class="link">${y.siteUsername}</a>`
+                                container.appendChild(p)
+                                count++
+                                counter.innerHTML = `There are <b>${count}</b> public accounts registered!`
+                            })
+                        })
+
+                        $(`#content-container #content #link`).text(`${Part[1]}`)
+                        $(`#content-container #content #link`).attr(`href`, `${Part[1]}`);
+                    }, 1000)
+                </script>
             </div>
         </div>
     </body>
