Fix 1: animation with an s

--- a/root/home.html
+++ b/root/home.html
@@ -55,7 +55,7 @@ The site has a new look! I've updated it to look and preform much better" name="
             <link rel="stylesheet" href="../css/main.css" type="text/css">
             <!-- <link rel="stylesheet" href="https://storage.theflagen430297.com/css/text.css" type="text/css"> -->
             <link rel="stylesheet" href="../css/text.css" type="text/css">
-            <!-- <link rel="stylesheet" href="https://storage.theflagen430297.com/css/animation.css" type="text/css"> -->
+            <!-- <link rel="stylesheet" href="https://storage.theflagen430297.com/css/animations.css" type="text/css"> -->
             <link rel="stylesheet" href="../css/animations.css" type="text/css">
             <link rel="shortcut icon" href="https://storage.theflagen430297.com/pictures/logo.ico" type="image/x-icon">
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
